--- a/homework.ipynb
+++ b/homework.ipynb
@@ -104,7 +104,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "cP4rScqMGuze"
       },
@@ -121,11 +121,22 @@
       "metadata": {
         "id": "S73zAB2vxDZs"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "44"
+            ]
+          },
+          "execution_count": 3,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# YOUR CHANGES HERE\n",
         "\n",
-        "p1 = ..."
+        "p1 = len(q1)"
       ]
     },
     {
@@ -151,7 +162,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "id": "KQiLAQuKW9Ce"
       },
@@ -164,22 +175,33 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "id": "2tXbdHcbXS_7"
       },
       "outputs": [],
       "source": [
         "# YOUR CHANGES HERE\n",
-        "\n",
-        "p2 = ..."
+        "p = q2.split(\",\")\n",
+        "p2 = len(p)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "18"
+            ]
+          },
+          "execution_count": 6,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "p2"
       ]
@@ -197,7 +219,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "id": "1CUU_Td7DdnH"
       },
@@ -206,23 +228,49 @@
         "# YOUR CHANGES HERE\n",
         "\n",
         "def p3(joke):\n",
-        "    ..."
+        "    substring = \"silly\"\n",
+        "    if substring in joke:\n",
+        "        return True\n",
+        "    else:\n",
+        "        return False"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "execution_count": 8,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "p3(\"this is a silly joke\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "execution_count": 9,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "p3(\"this joke is so boring because it drones on and on and on and on forever as if noone is really reading this amirite?\")"
       ]
@@ -241,7 +289,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -256,7 +304,7 @@
               "129412"
             ]
           },
-          "execution_count": null,
+          "execution_count": 10,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -267,7 +315,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -279,14 +327,11 @@
       "outputs": [
         {
           "data": {
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            },
             "text/plain": [
               "'🦄'"
             ]
           },
-          "execution_count": null,
+          "execution_count": 11,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -308,7 +353,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {
         "id": "8onkYe3bEFmd"
       },
@@ -316,14 +361,25 @@
       "source": [
         "# YOUR CHANGES HERE\n",
         "\n",
-        "p4 = ..."
+        "p4 = chr(128200) + chr(128201) + chr(128202)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "'📈📉📊'"
+            ]
+          },
+          "execution_count": 15,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "p4"
       ]
@@ -341,7 +397,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "metadata": {
         "id": "iezT1WYDGclf"
       },
@@ -354,7 +410,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "metadata": {
         "id": "K0KoZch7Gp1w"
       },
@@ -362,14 +418,26 @@
       "source": [
         "# YOUR CHANGES HERE\n",
         "\n",
-        "p5 = ..."
+        "p5 = q5.replace(\"jumped over\", \"greeted\")\n",
+        "p5 = p5.replace(\"lazy\", \"friendly\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "'The quick brown fox greeted the friendly brown dog.'"
+            ]
+          },
+          "execution_count": 19,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "p5"
       ]
@@ -389,7 +457,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 25,
       "metadata": {
         "id": "PhrfDMbyMnc1"
       },
@@ -398,23 +466,58 @@
         "# YOUR CHANGES HERE\n",
         "\n",
         "def p6(filename):\n",
-        "    ..."
+        "    with open(filename) as fp:\n",
+        "        def parse_line(line):\n",
+        "            return line.rstrip(\"\\n\").split(\"\\t\")\n",
+        " \n",
+        "        header = parse_line(next(fp))\n",
+        "        for line in fp:\n",
+        "            line = parse_line(line)\n",
+        "            dict = {}\n",
+        "            for key, value in zip(header, line):\n",
+        "                try:\n",
+        "                    dict[key] = int(value)\n",
+        "                except ValueError:\n",
+        "                    dict[key] = None\n",
+        "            yield dict"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 60,
+      "execution_count": 26,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "[{'a': 3, 'b': 4}]"
+            ]
+          },
+          "execution_count": 26,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "list(p6(\"data6_a.tsv\"))"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 61,
+      "execution_count": 27,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "[{'a': None, 'b': None, 'c': None}]"
+            ]
+          },
+          "execution_count": 27,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "list(p6(\"data6_b.tsv\"))"
       ]
@@ -446,7 +549,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 63,
+      "execution_count": 31,
       "metadata": {
         "id": "5-wvb6MGMuUT"
       },
@@ -455,23 +558,61 @@
         "# YOUR CHANGES HERE\n",
         "\n",
         "def p7(filename):\n",
-        "    ..."
+        "    with open(filename) as fp:\n",
+        "        def parse_line(line):\n",
+        "            return line.rstrip(\"\\n\").split(\"\\t\")\n",
+        " \n",
+        "        header = parse_line(next(fp))\n",
+        "        for line in fp:\n",
+        "            line = parse_line(line)\n",
+        "            dict = {}\n",
+        "            for key, value in zip(header, line):\n",
+        "                try:\n",
+        "                    dict[key] = int(value)\n",
+        "                    flag = False\n",
+        "                except ValueError:\n",
+        "                    dict[key] = 3\n",
+        "                    flag = True\n",
+        "            dict[\"finagled\"] = flag\n",
+        "            yield dict"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 32,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "[{'a': 3, 'b': 4, 'finagled': False}]"
+            ]
+          },
+          "execution_count": 32,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "list(p7(\"data7_a.tsv\"))"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 33,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "[{'a': 3, 'b': 3, 'c': 3, 'finagled': True}]"
+            ]
+          },
+          "execution_count": 33,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "list(p7(\"data7_b.tsv\"))"
       ]
@@ -491,7 +632,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 34,
       "metadata": {
         "id": "YIN0GfynNVS9"
       },
@@ -499,8 +640,26 @@
       "source": [
         "# YOUR CHANGES HERE\n",
         "\n",
-        "def p8(input_filename, output_filename, column_names):\n",
-        "    ..."
+        "def p8(input_filename, output_filename, column_names): \n",
+        "    def write_tsv(filename, column_names, rows):\n",
+        "        with open(filename, \"w\") as fp:\n",
+        "            def write_line(row):\n",
+        "                fp.write(\"\\t\".join(str(v) for v in row) + \"\\n\")\n",
+        "    \n",
+        "            write_line(column_names)\n",
+        "            for row in rows:\n",
+        "                write_line(row)\n",
+        "\n",
+        "    with open(input_filename) as fp:\n",
+        "        header = fp.readline().rstrip(\"\\n\").split(\"\\t\")\n",
+        "        indices = [header.index(col) for col in column_names]\n",
+        "        \n",
+        "        filtered_rows = []\n",
+        "        for line in fp:\n",
+        "            values = line.rstrip(\"\\n\").split(\"\\t\")\n",
+        "            filtered_rows.append([values[i] for i in indices])\n",
+        "    \n",
+        "    write_tsv(output_filename, column_names, filtered_rows)"
       ]
     },
     {
@@ -514,7 +673,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 73,
+      "execution_count": 35,
       "metadata": {
         "id": "Tr1U2MgwNaqN"
       },
@@ -526,7 +685,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 74,
+      "execution_count": 36,
       "metadata": {
         "id": "KIn9DFPaNoZl"
       },
@@ -535,7 +694,10 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "file not found\n"
+            "height\twidth\tcolor\n",
+            "45\t23\tred\n",
+            "62\t15\tblue\n",
+            "23\t123\tgreen\n"
           ]
         }
       ],
@@ -671,7 +833,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "5ymdKizuY1Jd"
       },
@@ -685,7 +847,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
         "id": "8bibT3VpZEKq"
       },
@@ -693,16 +855,27 @@
       "source": [
         "# YOUR CHANGES HERE\n",
         "\n",
-        "p11 = f\"Number of visits = {q11a}, average visit revenue = {q11b}\""
+        "p11 = f\"Number of visits = {q11a:,}, average visit revenue = {q11b:.2f}\""
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
         "id": "QENJ6s5lZMpg"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "'Number of visits = 5,125, average visit revenue = 3.51'"
+            ]
+          },
+          "execution_count": 11,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "p11"
       ]
@@ -721,7 +894,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {
         "id": "0p6cgsMkZ9J3"
       },
@@ -734,7 +907,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "metadata": {
         "id": "drPdwLZ8aZdo"
       },
@@ -742,14 +915,25 @@
       "source": [
         "# YOUR CHANGES HERE\n",
         "\n",
-        "p12 = ..."
+        "p12 = q12.split(\",\")[0]"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "'6.4'"
+            ]
+          },
+          "execution_count": 16,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "p12"
       ]
@@ -1058,7 +1242,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "metadata": {
         "id": "pfYbydeAIN2V"
       },
@@ -1068,18 +1252,29 @@
         "\n",
         "def p19(input):\n",
         "    if len(input) >= 10:\n",
-        "        return input[10]\n",
+        "        return input[9]\n",
         "\n",
         "    return None"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 22,
       "metadata": {
         "id": "AwmdK79zJeYd"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "'a'"
+            ]
+          },
+          "execution_count": 22,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# this should return \"a\"\n",
         "\n",
@@ -1088,7 +1283,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 23,
       "metadata": {
         "id": "YKgSkDoGJhvz"
       },
@@ -1100,11 +1295,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 24,
       "metadata": {
         "id": "eZ9mTjC2JZVc"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "'j'"
+            ]
+          },
+          "execution_count": 24,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# this should return \"j\"\n",
         "\n",
@@ -1196,7 +1402,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.6"
+      "version": "3.12.1"
     }
   },
   "nbformat": 4,
