--- a/homework.ipynb
+++ b/homework.ipynb
@@ -733,7 +733,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "bm-zS-HLQQgh"
       },
@@ -742,21 +742,42 @@
         "# YOUR CHANGES HERE\n",
         "\n",
         "def p9(filename):\n",
-        "    ...\n"
+        "    with open(filename) as fp:\n",
+        "        def parse_line(line):\n",
+        "            return line.rstrip(\"\\n\").split(\"\\t\")\n",
+        "        \n",
+        "        header = parse_line(next(fp))\n",
+        "        \n",
+        "        count = 0\n",
+        "        for line in fp:\n",
+        "            if line.strip():\n",
+        "                count += 1\n",
+        "            return count"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "1"
+            ]
+          },
+          "execution_count": 4,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "p9(\"data9_a.tsv\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -785,7 +806,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "id": "sGqg9EJ5H-8V"
       },
@@ -794,23 +815,47 @@
         "# YOUR CHANGES HERE\n",
         "\n",
         "def p10(filename):\n",
-        "    ..."
+        "    with open(filename) as fp:\n",
+        "        first_line = fp.readline().strip()\n",
+        "        return \"\\t\" in first_line"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "execution_count": 7,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "p10(\"data10_a.tsv\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "execution_count": 8,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "p10(\"data10_b.tsv\")"
       ]
@@ -952,7 +997,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
         "id": "fMqaF4brQhrq"
       },
@@ -961,23 +1006,47 @@
         "# YOUR CHANGES HERE\n",
         "\n",
         "def p13(filename):\n",
-        "    ..."
+        "    with open(filename) as fp:\n",
+        "        header = fp.readline().strip()\n",
+        "        return header.split(\",\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "['foo', 'bar']"
+            ]
+          },
+          "execution_count": 10,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "p13(\"data13_a.csv\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "['\"foo\"', '\"bar\"']"
+            ]
+          },
+          "execution_count": 11,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "p13(\"data13_b.csv\")"
       ]
