--- a/homework.ipynb
+++ b/homework.ipynb
@@ -82,13 +82,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "metadata": {},
       "outputs": [],
       "source": [
         "import csv\n",
         "import json\n",
-        "import re"
+        "import re\n",
+        "import os"
       ]
     },
     {
@@ -1074,41 +1075,101 @@
         "# YOUR CHANGES HERE\n",
         "\n",
         "def p14(filename, column_name):\n",
-        "    ..."
+        "    with open(filename) as fp:\n",
+        "        header = fp.readline().strip().split(\",\")\n",
+        "        if column_name not in header:\n",
+        "            raise KeyError(f\"'{column_name}' not in file\")\n",
+        "        \n",
+        "        col = header.index(column_name)\n",
+        "\n",
+        "        values = []\n",
+        "        for line in fp:\n",
+        "            if line.strip():\n",
+        "                row = line.strip().split(\",\")\n",
+        "                values.append(row[col])\n",
+        "        return values"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "['1', '3']"
+            ]
+          },
+          "execution_count": 2,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "p14(\"data14_a.csv\", \"foo\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "['2', '4']"
+            ]
+          },
+          "execution_count": 3,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "p14(\"data14_a.csv\", \"bar\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "KeyError",
+          "evalue": "\"'foo' now in file\"",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+            "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
+            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[4]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mp14\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mdata14_b.csv\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mfoo\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n",
+            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 7\u001b[39m, in \u001b[36mp14\u001b[39m\u001b[34m(filename, column_name)\u001b[39m\n\u001b[32m      5\u001b[39m header = fp.readline().strip().split(\u001b[33m\"\u001b[39m\u001b[33m,\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m      6\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m column_name \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m header:\n\u001b[32m----> \u001b[39m\u001b[32m7\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mcolumn_name\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m'\u001b[39m\u001b[33m now in file\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m      9\u001b[39m col = header.index(column_name)\n\u001b[32m     11\u001b[39m values = []\n",
+            "\u001b[31mKeyError\u001b[39m: \"'foo' now in file\""
+          ]
+        }
+      ],
       "source": [
         "p14(\"data14_b.csv\", \"foo\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 89,
+      "execution_count": 5,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "KeyError",
+          "evalue": "\"'bar' now in file\"",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+            "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
+            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[5]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mp14\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mdata14_b.csv\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mbar\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n",
+            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 7\u001b[39m, in \u001b[36mp14\u001b[39m\u001b[34m(filename, column_name)\u001b[39m\n\u001b[32m      5\u001b[39m header = fp.readline().strip().split(\u001b[33m\"\u001b[39m\u001b[33m,\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m      6\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m column_name \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m header:\n\u001b[32m----> \u001b[39m\u001b[32m7\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mcolumn_name\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m'\u001b[39m\u001b[33m now in file\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m      9\u001b[39m col = header.index(column_name)\n\u001b[32m     11\u001b[39m values = []\n",
+            "\u001b[31mKeyError\u001b[39m: \"'bar' now in file\""
+          ]
+        }
+      ],
       "source": [
         "p14(\"data14_b.csv\", \"bar\")"
       ]
@@ -1126,7 +1187,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 41,
+      "execution_count": 5,
       "metadata": {
         "id": "hwZliDa0RIDJ"
       },
@@ -1135,21 +1196,38 @@
         "# YOUR CHANGES HERE\n",
         "\n",
         "def p15(filename, key):\n",
-        "    ..."
+        "    with open(filename) as fp:\n",
+        "        data = json.load(fp)\n",
+        "    \n",
+        "        if not isinstance(data, dict):\n",
+        "            return None\n",
+        "\n",
+        "        return data.get(key, None)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "3"
+            ]
+          },
+          "execution_count": 6,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "p15(\"data15_a.json\", \"x\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1179,7 +1257,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
         "id": "GGmnvLxbPpLv"
       },
@@ -1188,14 +1266,37 @@
         "# YOUR CHANGES HERE\n",
         "\n",
         "def p16(filename):\n",
-        "    ..."
+        "    def avg(values):\n",
+        "        return sum(values) / len(values) if values else 0\n",
+        "    \n",
+        "    with open(filename) as fp:\n",
+        "        header = fp.readline().strip().split(\"\\t\")\n",
+        "        rows = [line.strip().split(\"\\t\") for line in fp if line.strip()]\n",
+        "\n",
+        "    average = {\n",
+        "        col: avg([float(row[i]) for row in rows])\n",
+        "        for i, col in enumerate(header)\n",
+        "    }\n",
+        "\n",
+        "    return average"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "{'foo': 1.0, 'bar': 2.0}"
+            ]
+          },
+          "execution_count": 9,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "p16(\"data16_a.tsv\")"
       ]
@@ -1213,7 +1314,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
         "id": "zXAXdv8sQrOm"
       },
@@ -1222,32 +1323,67 @@
         "# YOUR CHANGES HERE\n",
         "\n",
         "def p17(filename, column_names):\n",
-        "    ..."
+        "    with open(filename) as fp:\n",
+        "        header = fp.readline().strip().split(\",\")\n",
+        "        return all(col in header for col in column_names)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 113,
+      "execution_count": 11,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "execution_count": 11,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "p17(\"data17_a.csv\", [\"foo\"])"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 114,
+      "execution_count": 12,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "execution_count": 12,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "p17(\"data17_a.csv\", [\"foo\", \"bar\"])"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 115,
+      "execution_count": 13,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "execution_count": 13,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "p17(\"data17_a.csv\", [\"baz\"])"
       ]
@@ -1265,7 +1401,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "metadata": {
         "id": "qAgVEX3eQ4Hm"
       },
@@ -1274,12 +1410,25 @@
         "# YOUR CHANGES HERE\n",
         "\n",
         "def p18(filename, column_name, column_value):\n",
-        "    ..."
+        "    with open(filename) as fp:\n",
+        "        header = fp.readline().strip().split(\"\\t\")\n",
+        "\n",
+        "        if column_name not in header:\n",
+        "            return None\n",
+        "\n",
+        "        index = header.index(column_name)\n",
+        "        for line in fp:\n",
+        "            if line.strip():\n",
+        "                row = line.strip().split(\"\\t\")\n",
+        "                if row[index] == str(column_value):\n",
+        "                    return dict(zip(header, row))\n",
+        "                \n",
+        "        return None"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1288,7 +1437,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1415,7 +1564,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 20,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1423,24 +1572,32 @@
         "id": "7ZmPXwpsLmrp",
         "outputId": "a279e7ad-6c5c-4d39-8dbd-dfdb48cd286d"
       },
+      "outputs": [],
+      "source": [
+        "# YOUR CHANGES HERE\n",
+        "\n",
+        "pattern = re.compile(r\"^data20_[0-9]\\.tsv$\")\n",
+        "p20 = [filename for filename in os.listdir(\".\") if pattern.match(filename)]"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 21,
+      "metadata": {},
       "outputs": [
         {
           "data": {
             "text/plain": [
-              "Ellipsis"
+              "['data20_0.tsv', 'data20_8.tsv']"
             ]
           },
-          "execution_count": null,
+          "execution_count": 21,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "# YOUR CHANGES HERE\n",
-        "\n",
-        "p20 = []\n",
-        "\n",
-        "..."
+        "p20"
       ]
     },
     {
@@ -1448,9 +1605,7 @@
       "execution_count": null,
       "metadata": {},
       "outputs": [],
-      "source": [
-        "p20"
-      ]
+      "source": []
     }
   ],
   "metadata": {
