--- a/homework.ipynb
+++ b/homework.ipynb
@@ -220,7 +220,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 1,
       "metadata": {
         "id": "1CUU_Td7DdnH"
       },
@@ -230,7 +230,7 @@
         "\n",
         "def p3(joke):\n",
         "    substring = \"silly\"\n",
-        "    if substring in joke:\n",
+        "    if substring in joke and len(joke) <= 50:\n",
         "        return True\n",
         "    else:\n",
         "        return False"
@@ -238,7 +238,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [
         {
@@ -247,7 +247,7 @@
               "True"
             ]
           },
-          "execution_count": 8,
+          "execution_count": 2,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -258,7 +258,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [
         {
@@ -267,7 +267,7 @@
               "False"
             ]
           },
-          "execution_count": 9,
+          "execution_count": 3,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -550,7 +550,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 4,
       "metadata": {
         "id": "5-wvb6MGMuUT"
       },
@@ -565,9 +565,9 @@
         " \n",
         "        header = parse_line(next(fp))\n",
         "        for line in fp:\n",
-        "            line = parse_line(line)\n",
+        "            values = parse_line(line)\n",
         "            dict = {}\n",
-        "            for key, value in zip(header, line):\n",
+        "            for key, value in zip(header, values):\n",
         "                try:\n",
         "                    dict[key] = int(value)\n",
         "                    flag = False\n",
@@ -580,7 +580,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [
         {
@@ -589,7 +589,7 @@
               "[{'a': 3, 'b': 4, 'finagled': False}]"
             ]
           },
-          "execution_count": 32,
+          "execution_count": 5,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -600,7 +600,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [
         {
@@ -609,7 +609,7 @@
               "[{'a': 3, 'b': 3, 'c': 3, 'finagled': True}]"
             ]
           },
-          "execution_count": 33,
+          "execution_count": 6,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -734,7 +734,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 7,
       "metadata": {
         "id": "bm-zS-HLQQgh"
       },
@@ -753,12 +753,12 @@
         "        for line in fp:\n",
         "            if line.strip():\n",
         "                count += 1\n",
-        "            return count"
+        "        return count"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [
         {
@@ -767,7 +767,7 @@
               "1"
             ]
           },
-          "execution_count": 4,
+          "execution_count": 8,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -778,9 +778,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 9,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "0"
+            ]
+          },
+          "execution_count": 9,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "p9(\"data9_b.tsv\")"
       ]
@@ -953,7 +964,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "id": "drPdwLZ8aZdo"
       },
@@ -961,7 +972,7 @@
       "source": [
         "# YOUR CHANGES HERE\n",
         "\n",
-        "p12 = q12.split(\",\")[0]"
+        "p12 = float(q12.split(\",\")[0])"
       ]
     },
     {
@@ -998,7 +1009,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 10,
       "metadata": {
         "id": "fMqaF4brQhrq"
       },
@@ -1007,25 +1018,27 @@
         "# YOUR CHANGES HERE\n",
         "\n",
         "def p13(filename):\n",
-        "    with open(filename) as fp:\n",
-        "        header = fp.readline().strip()\n",
-        "        return header.split(\",\")"
+        "    with open(filename, newline='') as fp:\n",
+        "        file = csv.reader(fp)\n",
+        "        return next(file)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [
         {
-          "data": {
-            "text/plain": [
-              "['foo', 'bar']"
-            ]
-          },
-          "execution_count": 10,
-          "metadata": {},
-          "output_type": "execute_result"
+          "ename": "NameError",
+          "evalue": "name 'csv' is not defined",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+            "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[11]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mp13\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mdata13_a.csv\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n",
+            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[10]\u001b[39m\u001b[32m, line 5\u001b[39m, in \u001b[36mp13\u001b[39m\u001b[34m(filename)\u001b[39m\n\u001b[32m      3\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mp13\u001b[39m(filename):\n\u001b[32m      4\u001b[39m     \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(filename, newline=\u001b[33m'\u001b[39m\u001b[33m'\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m fp:\n\u001b[32m----> \u001b[39m\u001b[32m5\u001b[39m         file = \u001b[43mcsv\u001b[49m.reader(fp)\n\u001b[32m      6\u001b[39m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mnext\u001b[39m(file)\n",
+            "\u001b[31mNameError\u001b[39m: name 'csv' is not defined"
+          ]
         }
       ],
       "source": [
@@ -1066,7 +1079,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {
         "id": "1vo-ODsBPSW1"
       },
@@ -1075,35 +1088,32 @@
         "# YOUR CHANGES HERE\n",
         "\n",
         "def p14(filename, column_name):\n",
-        "    with open(filename) as fp:\n",
-        "        header = fp.readline().strip().split(\",\")\n",
-        "        if column_name not in header:\n",
+        "    with open(filename, newline='') as fp:\n",
+        "        file = csv.DictReader(fp)\n",
+        "        if column_name not in file.fieldnames:\n",
         "            raise KeyError(f\"'{column_name}' not in file\")\n",
         "        \n",
-        "        col = header.index(column_name)\n",
+        "        col = file.index(column_name)\n",
         "\n",
-        "        values = []\n",
-        "        for line in fp:\n",
-        "            if line.strip():\n",
-        "                row = line.strip().split(\",\")\n",
-        "                values.append(row[col])\n",
-        "        return values"
+        "        return [row[column_name] for row in file]"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 13,
       "metadata": {},
       "outputs": [
         {
-          "data": {
-            "text/plain": [
-              "['1', '3']"
-            ]
-          },
-          "execution_count": 2,
-          "metadata": {},
-          "output_type": "execute_result"
+          "ename": "NameError",
+          "evalue": "name 'csv' is not defined",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+            "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[13]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mp14\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mdata14_a.csv\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mfoo\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n",
+            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[12]\u001b[39m\u001b[32m, line 5\u001b[39m, in \u001b[36mp14\u001b[39m\u001b[34m(filename, column_name)\u001b[39m\n\u001b[32m      3\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mp14\u001b[39m(filename, column_name):\n\u001b[32m      4\u001b[39m     \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(filename, newline=\u001b[33m'\u001b[39m\u001b[33m'\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m fp:\n\u001b[32m----> \u001b[39m\u001b[32m5\u001b[39m         file = \u001b[43mcsv\u001b[49m.DictReader(fp)\n\u001b[32m      6\u001b[39m         \u001b[38;5;28;01mif\u001b[39;00m column_name \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m file.fieldnames:\n\u001b[32m      7\u001b[39m             \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mcolumn_name\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m'\u001b[39m\u001b[33m not in file\u001b[39m\u001b[33m\"\u001b[39m)\n",
+            "\u001b[31mNameError\u001b[39m: name 'csv' is not defined"
+          ]
         }
       ],
       "source": [
@@ -1314,7 +1324,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 16,
       "metadata": {
         "id": "zXAXdv8sQrOm"
       },
@@ -1323,25 +1333,28 @@
         "# YOUR CHANGES HERE\n",
         "\n",
         "def p17(filename, column_names):\n",
-        "    with open(filename) as fp:\n",
-        "        header = fp.readline().strip().split(\",\")\n",
+        "    with open(filename, newline='') as fp:\n",
+        "        file = csv.reader(fp)\n",
+        "        header = next(file)\n",
         "        return all(col in header for col in column_names)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 15,
       "metadata": {},
       "outputs": [
         {
-          "data": {
-            "text/plain": [
-              "True"
-            ]
-          },
-          "execution_count": 11,
-          "metadata": {},
-          "output_type": "execute_result"
+          "ename": "NameError",
+          "evalue": "name 'csv' is not defined",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+            "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[15]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mp17\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mdata17_a.csv\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mfoo\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n",
+            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[14]\u001b[39m\u001b[32m, line 5\u001b[39m, in \u001b[36mp17\u001b[39m\u001b[34m(filename, column_names)\u001b[39m\n\u001b[32m      3\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mp17\u001b[39m(filename, column_names):\n\u001b[32m      4\u001b[39m     \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(filename, newline=\u001b[33m'\u001b[39m\u001b[33m'\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m fp:\n\u001b[32m----> \u001b[39m\u001b[32m5\u001b[39m         file = \u001b[43mcsv\u001b[49m.DictReader(fp)\n\u001b[32m      6\u001b[39m         \u001b[38;5;28;01mreturn\u001b[39;00m [row[column_names] \u001b[38;5;28;01mfor\u001b[39;00m row \u001b[38;5;129;01min\u001b[39;00m file]\n",
+            "\u001b[31mNameError\u001b[39m: name 'csv' is not defined"
+          ]
         }
       ],
       "source": [
