--- a/homework.ipynb
+++ b/homework.ipynb
@@ -550,7 +550,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "5-wvb6MGMuUT"
       },
@@ -567,6 +567,7 @@
         "        for line in fp:\n",
         "            values = parse_line(line)\n",
         "            dict = {}\n",
+        "            flag = False\n",
         "            for key, value in zip(header, values):\n",
         "                try:\n",
         "                    dict[key] = int(value)\n",
@@ -1079,7 +1080,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "id": "1vo-ODsBPSW1"
       },
@@ -1089,13 +1090,14 @@
         "\n",
         "def p14(filename, column_name):\n",
         "    with open(filename, newline='') as fp:\n",
-        "        file = csv.DictReader(fp)\n",
-        "        if column_name not in file.fieldnames:\n",
+        "        file = csv.reader(fp)\n",
+        "        header = next(file)\n",
+        "        if column_name not in header:\n",
         "            raise KeyError(f\"'{column_name}' not in file\")\n",
         "        \n",
         "        col = file.index(column_name)\n",
         "\n",
-        "        return [row[column_name] for row in file]"
+        "        return [row[col] for row in file]"
       ]
     },
     {
