--- a/homework.ipynb
+++ b/homework.ipynb
@@ -571,7 +571,6 @@
         "            for key, value in zip(header, values):\n",
         "                try:\n",
         "                    dict[key] = int(value)\n",
-        "                    flag = False\n",
         "                except ValueError:\n",
         "                    dict[key] = 3\n",
         "                    flag = True\n",
@@ -1095,7 +1094,7 @@
         "        if column_name not in header:\n",
         "            raise KeyError(f\"'{column_name}' not in file\")\n",
         "        \n",
-        "        col = file.index(column_name)\n",
+        "        col = header.index(column_name)\n",
         "\n",
         "        return [row[col] for row in file]"
       ]
